[package]
name = "minusbot"
version = "0.1.0"
authors = ["MinusKelvin <mark.carlson@minuskelvin.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.5.4"
fumen = "0.1.2"
lazy_static = "1.4.0"
gif = "0.11.1"
tokio = { version = "1.12", features = ["macros", "fs", "rt-multi-thread"] }
libtetris = { git = "https://github.com/MinusKelvin/cold-clear" }
cold-clear = { git = "https://github.com/MinusKelvin/cold-clear" }
reqwest = "0.10.8"
chrono = "0.4.19"
once_cell = "1.8.0"

[dependencies.serenity]
version = "0.10.9"
